syntax = "proto3";

option go_package = "github.com/CyDrive/model";

package model;

import "google/protobuf/timestamp.proto";
import "options/gorm.proto";

message SafeAccount {
    int64 id = 1;
    string email = 2;
    string user_name = 3;
    int64 usage = 4;
    int64 cap = 5;
}

message Account {
    option (gorm.opts).ormable = true;
    // Safe part
    int64 id = 1 [(gorm.field).tag = {primary_key: true}];
    string email = 2;
    string name = 3;
    int64 usage = 4;
    int64 cap = 5;

    string password = 6;
    string data_dir = 7;

    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}