syntax = "proto3";

option go_package = "github.com/CyDrive/model";

package model;

message FileInfo {
    string file_path = 1;
    int64 size = 2;
    int64 modify_time = 3;
    bool is_dir = 4;
    bool is_compressed = 5;
}

message DownloadResponse {
    int32 task_id = 1;
    FileInfo file_info = 2;
}

message UploadRequest {
    FileInfo file_info = 1;
}

message UploadResponse {
    int32 task_id = 1;
}

